--- a/src/app/page/login/login.component.css
+++ b/src/app/page/login/login.component.css
@@ -1,3 +1,20 @@
+.notification-card{
+  padding: 23px 20px 18px 20px;
+}
+
+.notification-card h4{
+  margin-bottom: 15px;
+}
+
+.place{
+  padding: 20px;
+}
+
+
+
+
+
+
 .container{
   height: 100%;
   position: relative;
