--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,13 +11,17 @@
       <button md-mini-fab class="search-btn"><i class="material-icons" style="font-size:18px;">search</i></button>
       <button md-icon-button><i class="material-icons icon-btn">dashboard</i></button>
       <app-msgiconbtn icon="notifications" number="5" [mdMenuTriggerFor]="menu"></app-msgiconbtn>
-      <button md-icon-button><i class="material-icons icon-btn">person</i></button>
+      <button md-icon-button [mdMenuTriggerFor]="person"><i class="material-icons icon-btn">person</i></button>
       <md-menu #menu="mdMenu">
         <button md-menu-item>Mike John responded to your email</button>
         <button md-menu-item>You have 5 new tasks</button>
         <button md-menu-item>You're now friend with Andrew</button>
         <button md-menu-item>Another Notification</button>
         <button md-menu-item>Another One</button>
+      </md-menu>
+      <md-menu #person="mdMenu">
+        <button md-menu-item>个人信息</button>
+        <button md-menu-item (click)="logout()">退出</button>
       </md-menu>
     </div>
     <div id="menu">
